-Fixed issue #1168: The Style of the "Ranking Question" isn´t adjusted to the new color scheme at DataEntry -Fixed issue #1168: Warning in template editor at "Question Page", "Submit Page" and "Clear all page" -Fixed issue #1168: Completed Field Too Short
git-svn-id: file:///Users/Shitiz/Downloads/lssvn/source/limesurvey@3199 b72ed6b6-b9f8-46b5-92b4-906544132732

--- a/admin/styles/default/adminstyle.css
+++ b/admin/styles/default/adminstyle.css
@@ -454,3 +454,15 @@ span.settingcaption {
 .oddrow{
    background-color: #EBF2FA;
 }
+
+.choicelist{
+	width:200px;
+	font-size: 10pt;
+	
+}
+
+.ranklist{
+	width:200px;
+	margin-top:3px;
+
+}
